sites/navy/clusters/dal-navy-core-1/wave-5/overlays/frigate/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: frigate
    app.kubernetes.io/name: frigate
  name: frigate
  namespace: frigate
spec:
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: http
    - name: http-auth
      port: 8971
      protocol: TCP
      targetPort: http-auth
    - name: rtmp
      port: 1935
      protocol: TCP
      targetPort: rtmp
    - name: rtsp
      port: 8554
      protocol: TCP
      targetPort: rtsp
    - name: webrtc-tcp
      port: 8555
      protocol: TCP
      targetPort: webrtc-tcp
    - name: webrtc-udp
      port: 8555
      protocol: UDP
      targetPort: webrtc-udp
  selector:
    app.kubernetes.io/instance: frigate
    app.kubernetes.io/name: frigate
  type: ClusterIP
