sites/navy/clusters/dal-navy-core-1/wave-5/overlays/frigate/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: frigate
    app.kubernetes.io/name: frigate
  name: frigate
  annotations:
    cert-manager.io/cluster-issuer: dalmura-letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: frigate.navy.dalmura.cloud
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: true
    traefik.ingress.kubernetes.io/router.middlewares: authentik-authentik@kubernetescrd
spec:
  ingressClassName: ingress-private
  tls:
    - hosts:
      - frigate.navy.dalmura.cloud
      secretName: frigate-cert
  rules:
  - host: frigate.navy.dalmura.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frigate
            port:
              number: 8971
